kommenteeritud "tuleviku" tekst

--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
 <h1>Milleilma info</h1>
 <p>Siit leiate (ilmselt) kõik vajaliku info milleilma kohta<br>
 Milleilma kasutamiseks peate esialgu valima kaartil asukoha. Kui asukoht on õige, vajutage "Jah" ja juba näete Milleilm on!<br>
-Kui tahate salvestada asukoha, vajutage pärast asukoha valimist ja jah nuppu vajutamist nuppu salvesta asukoht. <b>NB! Kasutab küpsiseid!</b> Asukoha muutmiseks, kui on salvestatud asukoht, vajuta vali teine asukoht. See kustutab ka küpsised sellelt lehelt.
+<!-- Kui tahate salvestada asukoha, vajutage pärast asukoha valimist ja jah nuppu vajutamist nuppu salvesta asukoht. <b>NB! Kasutab küpsiseid!</b> Asukoha muutmiseks, kui on salvestatud asukoht, vajuta vali teine asukoht. See kustutab ka küpsised sellelt lehelt. -->
 <br><b>Allikad:</b><br>
 ilmainfo: open-meteo<br>
 natuke infot: w3schools<br>
